--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <!----------------------------------------------------header-------------------------------------------------------->
     <header>
-        <img src="./img/logo.png" alt="Konoha retaurant logo">
+        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,26 +29,26 @@
             US</h1>
     </section>
     <!----------------------------------------------------section1------------------------------------------------------->
-    <section>
-        <div>
-            <div>
+    <section class="contact-section">
+            <div class="contact-header">
                 <h2>CONTACT US FORM</h2>
             </div>
-            <form action="">
-                <div>
+            <div>
+                <img src="" alt="restaurant image">
+            </div>
+            <form class="contact-form">
+                <div class="f-name">
                     <input type="text" name="first-name" id="first-name" placeholder="First Name">
+                </div>
+                <div class="l-name">
                     <input type="text" name="last-name" id="last-name" placeholder="Last Name">
                 </div>
-                <div>
+                <div class="email">
                     <input type="email" name="email" id="email" placeholder="Email">
-                    <textarea name="message" id="message" placeholder="message"></textarea>
                 </div>
-                <button><a href="">Send Message</a></button>
+                <input type="text" name="message" id="message" placeholder="Message">
+                    <button><a href="">Send Message</a></button>
             </form>
-            <div>
-                <img src="" alt="">
-            </div>
-        </div>
     </section>
     <!-----------------------------------------------------FOOTER--------------------------------------------------------->
     <footer>
