--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
     <section class="firts-section home">
-        <img src="/img/background1.jpg" alt="" class="background">
+        <img src="/img/background1.jpg" alt="sushi background" class="first-section-background">
         <div class="wave">
-            <h1 >Welcom to KONOHA restaurant</h1>
+            <h1 >Welcom <br>to<br><span>KONOHA</span><br><span>restaurant</span></h1>
             <button><a href="/menu.html">MENU</a></button>
         </div>
-        
     </section>
     <!----------------------------------------------------section2------------------------------------------------------->
-    <section class="">
-        <div>
+    <section class="section-two home">
+        <div class="headers">
             <h3>NOS SPECIAUX</h3>
-            <h2>Les inconditionnels de KONOHA</h2> 
+            <h2>Les inconditionnels de <br>KONOHA</h2> 
         </div>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <div class="plat-grid">
+            <div class="plat-1"></div>
+            <div class="plat-2"></div>
+            <div class="plat-3"></div>
+            <div class="plat-4"></div>
+            <div class="plat-5"></div>
+            <div class="plat-6"></div>
         </div>
     </section>
     <!----------------------------------------------------section3------------------------------------------------------->
