--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <!----------------------------------------------------header-------------------------------------------------------->
     <header>
-        <img src="./img/logo.png" alt="Konoha retaurant logo">
+        <img src="./img/logo.png" alt="Konoha retaurant logo" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
