add html and css files

--- a/menu.html
+++ b/menu.html
@@ -23,150 +23,111 @@
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
     <section class="firts-section home">
-        <h1>Enjoy
-            our
-            Menu</h1>
+        <img src="./img/background1.jpg" alt="sushi background" class="first-section-background">
+        <div class="wave">
+            <h1 >Enjoy <br>
+                <span>
+                    our <br>
+                Menu
+                </span>
+                </h1>
+        </div>
     </section>
     <!----------------------------------------------------section2------------------------------------------------------->
-    <section>
+    <section class="menu-section">
         <h2>OUR MENU</h2>
-        <div>
-            <div>
-                <option value=""></option>
-                <div>
-                    <img src="" alt="shop cart png">
+        <div class="menu">
+            <div class="menu-filter">
+                <select name="filter" id="filter">
+                    <option value="all">All</option>
+                    <option value="sushi">Sushi</option>
+                    <option value="ramen">Ramen</option>
+                    <option value="salade">Salade</option>
+                </select>
+                <div class="chop-cart">
+                    <img src="/img/shopping-cart.png" alt="shop cart png" width="34px" height="34px">
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="dishes">
+                <div class="plat-1 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-2 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-3 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-4 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-5 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-6 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-7 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
+                <div class="plat-8 plat">
                     <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                    <button><a href="">add to cart</a></button>
                 </div>
-                <div>
-                    <p>lorem ipsum</p>
-                    <ul>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                        <li>something</li>
-                    </ul>
-                    <button>add to cart</button>
+                <div class="plat-9 plat">
+                    <div>
+                        <p>lorem ipsum</p>
+                    </div>
+                    <div>
+                        <button><a href="">add to cart</a></button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-----------------------------------------------------FOOTER--------------------------------------------------------->
     <footer>
-        <img src="./img/logo.png" alt="Konoha retaurant logo">
-        <div>
+        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
+        <div class="info">
             <div>
-                <img src="./img/" alt="">
-                <div>
+                <img src="img/phone.png" alt="" class="icon">
                     <p>+2126 12 34 56 78</p>
                     <p>+2126 21 43 65 87</p>
-                </div>
-            </div>
-            <div>
-                <img src="" alt="">
-                <div>
-                    <p>Konoha@gmail.com</p>
-                    <p>Konoha-safi@gmail.com</p>
-                    <p>Konoha-casa@gmail.com</p>
-                    <p>Konoha-agadir@gmail.com</p>
-                </div>
+                    <img src="/img/mail.png" alt="" >
+                    <div class="email-list">
+                        <p>Konoha@gmail.com</p>
+                        <p>Konoha-safi@gmail.com</p>
+                        <p>Konoha-casa@gmail.com</p>
+                        <p>Konoha-agadir@gmail.com</p>
+                    </div>
             </div>
             <div>
                 <div>
-                    <img src="" alt="">
+                    <img src="/img/facebook-box-logo.png" >
                     <p>konoha resturant</p>
                 </div>
-                <div>
-                    <img src="" alt="">
+                <div class="informations">
+                    <img src="/img/instagram-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
-                <div>
-                    <img src="" alt="">
+                <div class="informations">
+                    <img src="/img/twitter-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
             </div>
-            <p>© 2022 KONOHA Tous les droits sont réservés.</p>
+            <div>
+                
+            </div>
+            
         </div>
+        <p class="copyright">© 2022 KONOHA Tous les droits sont réservés.</p>
     </footer>
 </body>
 </html>
