--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
     </section>
     <!-----------------------------------------------------FOOTER--------------------------------------------------------->
     <footer>
-        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
+        <img src="./img/logo.png" alt="Konoha retaurant logo" class="logo">
         <div class="info">
             <div>
-                <img src="img/phone.png" alt="" class="icon">
+                <img src="./img/phone.png" alt="" class="icon">
                     <p>+2126 12 34 56 78</p>
                     <p>+2126 21 43 65 87</p>
-                    <img src="/img/mail.png" alt="" >
+                    <img src="./img/mail.png" alt="" >
                     <div class="email-list">
                         <p>Konoha@gmail.com</p>
                         <p>Konoha-safi@gmail.com</p>
@@ -132,15 +132,15 @@
             </div>
             <div>
                 <div>
-                    <img src="/img/facebook-box-logo.png" >
+                    <img src="./img/facebook-box-logo.png" >
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/instagram-logo.png" alt="">
+                    <img src="./img/instagram-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/twitter-logo.png" alt="">
+                    <img src="./img/twitter-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
             </div>
