--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
                     <option value="salade">Salade</option>
                 </select>
                 <div class="chop-cart">
-                    <img src="/img/shopping-cart.png" alt="shop cart png" width="34px" height="34px">
+                    <img src="./img/shopping-cart.png" alt="shop cart png" width="34px" height="34px">
                 </div>
             </div>
             <div class="dishes">
@@ -94,10 +94,10 @@
     </section>
     <!-----------------------------------------------------FOOTER--------------------------------------------------------->
     <footer>
-        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
+        <img src="./img/logo.png" alt="Konoha retaurant logo" class="logo">
         <div class="info">
             <div>
-                <img src="img/phone.png" alt="" class="icon">
+                <img src="./img/phone.png" alt="" class="icon">
                     <p>+2126 12 34 56 78</p>
                     <p>+2126 21 43 65 87</p>
                     <img src="/img/mail.png" alt="" >
@@ -110,15 +110,15 @@
             </div>
             <div>
                 <div>
-                    <img src="/img/facebook-box-logo.png" >
+                    <img src="./img/facebook-box-logo.png" >
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/instagram-logo.png" alt="">
+                    <img src="./img/instagram-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/twitter-logo.png" alt="">
+                    <img src="./img/twitter-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
             </div>
