--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <!----------------------------------------------------header-------------------------------------------------------->
     <header>
-        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
+        <img src="./img/logo.png" alt="Konoha retaurant logo" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -58,13 +58,13 @@
     </section>
     <!-----------------------------------------------------FOOTER--------------------------------------------------------->
     <footer>
-        <img src="/img/logo.png" alt="Konoha retaurant logo" class="logo">
+        <img src="./img/logo.png" alt="Konoha retaurant logo" class="logo">
         <div class="info">
             <div>
-                <img src="img/phone.png" alt="" class="icon">
+                <img src="./img/phone.png" alt="" class="icon">
                     <p>+2126 12 34 56 78</p>
                     <p>+2126 21 43 65 87</p>
-                    <img src="/img/mail.png" alt="" >
+                    <img src="./img/mail.png" alt="" >
                     <div class="email-list">
                         <p>Konoha@gmail.com</p>
                         <p>Konoha-safi@gmail.com</p>
@@ -74,15 +74,15 @@
             </div>
             <div>
                 <div>
-                    <img src="/img/facebook-box-logo.png" >
+                    <img src="./img/facebook-box-logo.png" >
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/instagram-logo.png" alt="">
+                    <img src="./img/instagram-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
                 <div class="informations">
-                    <img src="/img/twitter-logo.png" alt="">
+                    <img src="./img/twitter-logo.png" alt="">
                     <p>konoha resturant</p>
                 </div>
             </div>
