--- a/about.html
+++ b/about.html
@@ -18,11 +18,29 @@
                 <li><a href="" class="link">About US</a></li>
                 <li><a href="contact.html">Contact US</a></li>
             </ul>
-        <a href="" class="shoping-cart">
-            <img src="./img/shopping-cart.png" alt="shping cart png">
-            <div>0</div>
-        </a>
-        <img src="./img/burger-menu.png" alt="nav icon" id="burger">
+            <div id="nav-bg"></div>
+            
+            <div class="shoping-cart">
+                <img src="./img/shopping-cart.png" alt="shping cart png">
+                <div id="count">0</div>
+            </div>
+             <div id="cart-bx">
+                <div class="your-cart">
+                    <h3>Your Cart</h3>
+                </div>
+                <hr>
+                <div class="product">
+                    <p>there are no products yet</p>
+                </div>
+                <div class="buy">
+                    <span id="total">Total:  0.0DH</span>
+                    <div class="buy-now">
+                        <button>Buy now</button>
+                    </div>
+                    
+                </div>
+            </div>
+            <img src="./img/burger-menu.png" alt="nav icon" id="burger">
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
     <section class="section-about section">
@@ -84,5 +102,6 @@
         </div>
         <p>© 2022 KONOHA Tous les droits sont réservés.</p>
     </footer>
+    <script src="./JavaScript/script.js"></script>
 </body>
 </html>
