--- a/index.html
+++ b/index.html
@@ -18,10 +18,28 @@
                 <li><a href="about.html">About US</a></li>
                 <li><a href="contact.html">Contact US</a></li>
             </ul>
-        <a href="" class="shoping-cart">
+            <div id="nav-bg"></div>
+            
+        <div class="shoping-cart">
             <img src="./img/shopping-cart.png" alt="shping cart png">
             <div id="count">0</div>
-        </a>
+        </div>
+         <div id="cart-bx">
+            <div class="your-cart">
+                <h3>Your Cart</h3>
+            </div>
+            <hr>
+            <div class="product">
+                <p>there are no products yet</p>
+            </div>
+            <div class="buy">
+                <span id="total">Total:  0.0DH</span>
+                <div class="buy-now">
+                    <button>Buy now</button>
+                </div>
+                
+            </div>
+        </div>
         <img src="./img/burger-menu.png" alt="nav icon" id="burger">
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
