--- a/menu.html
+++ b/menu.html
@@ -18,11 +18,28 @@
                 <li><a href="about.html">About US</a></li>
                 <li><a href="contact.html">Contact US</a></li>
             </ul>
-        </nav>
-        <a href="" class="shoping-cart">
+            <div id="nav-bg"></div>
+            
+        <div class="shoping-cart">
             <img src="./img/shopping-cart.png" alt="shping cart png">
-            <div>0</div>
-        </a>
+            <div id="count">0</div>
+        </div>
+         <div id="cart-bx">
+            <div class="your-cart">
+                <h3>Your Cart</h3>
+            </div>
+            <hr>
+            <div class="product">
+                <p>there are no products yet</p>
+            </div>
+            <div class="buy">
+                <span id="total">Total:  0.0DH</span>
+                <div class="buy-now">
+                    <button>Buy now</button>
+                </div>
+                
+            </div>
+        </div>
         <img src="./img/burger-menu.png" alt="nav icon" id="burger">
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
@@ -47,41 +64,41 @@
             </select>
         </div>
         <div class="menu">
-            <div class="plat-1 sushi all" >
-                <h4>Name</h4>
-                <button>Add to cart</button>
+            <div class="plat-1 sushi all" price="59">
+                <h4>Name1</h4>
+                <button>Add to cart <span style="font-weight: 500;">59DH</span></button>
             </div>
-            <div class="plat-2 sushi all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+            <div class="plat-2 sushi all" >
+                <h4>Name2</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="59">59DH</span></button>
             </div>
             <div class="plat-3 sushi all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name3</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="59">59DH</span></button>
             </div>
             <div class="plat-4 ramen all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name4</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="59">59DH</span></button>
             </div>
             <div class="plat-5 ramen all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name5</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="59">59DH</span></button>
             </div>
             <div class="plat-6 ramen all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name6</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="59">59DH</span></button>
             </div>
             <div class="plat-7 salade all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name7</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="89">89DH</span></button>
             </div>
             <div class="plat-8 salade all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name8</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="89">89DH</span></button>
             </div>
             <div class="plat-9 salade all">
-                <h4>Name</h4>
-                <button>Add to cart</button>
+                <h4>Name9</h4>
+                <button>Add to cart <span style="font-weight: 500;" price="89">89DH</span></button>
             </div>
         </div>
     </section>
@@ -124,5 +141,6 @@
         </div>
         <p>© 2022 KONOHA Tous les droits sont réservés.</p>
     </footer>
+    <script src="./JavaScript/script.js"></script>
 </body>
 </html>
