--- a/index.html
+++ b/index.html
@@ -19,33 +19,12 @@
                 <li><a href="contact.html">Contact US</a></li>
             </ul>
             <div id="nav-bg"></div>
-            
-        <div class="shoping-cart">
-            <img src="./img/shopping-cart.png" alt="shping cart png">
-            <div id="count">0</div>
-        </div>
-         <div id="cart-bx">
-            <div class="your-cart">
-                <h3>Your Cart</h3>
-            </div>
-            <hr>
-            <div class="product">
-                <p>there are no products yet</p>
-            </div>
-            <div class="buy">
-                <span id="total">Total:  0.0DH</span>
-                <div class="buy-now">
-                    <button>Buy now</button>
-                </div>
-                
-            </div>
-        </div>
         <img src="./img/burger-menu.png" alt="nav icon" id="burger">
     </header>
     <!----------------------------------------------------section1------------------------------------------------------->
     <section class="section-home section">
         <div class="wave">
-            <h1 >Welcom<br>to<br><span>KONOHA</span><br><span>restaurant</span></h1>
+            <h1 >Welcome<br>to<br><span>KONOHA</span><br><span>restaurant</span></h1>
             <button><a href="./menu.html">MENU</a></button>
         </div>
     </section>
